Bug 453075 - Exporting Game Collection to GCstar fails to save images
Summary: Exporting Game Collection to GCstar fails to save images
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Other
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-27 00:49 UTC by Robby Stephenson
Modified: 2022-04-27 19:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.4.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2022-04-27 00:49:05 UTC
When exporting a Game-Collection, you'll get an error about not beeing able to save "imagefilename".png|jp(e)g. One Error per collection-entry (which gets really frustrating on big libraries. This seems to be the case wether you have configured tellico to save the image alonside the collection relatively or embed it into the tc-file itself.

testet on ubuntu 20.04/x86_64, v3.4+git under KDE

https://invent.kde.org/office/tellico/-/issues/13
Comment 1 Robby Stephenson 2022-04-27 19:12:30 UTC
Git commit eb98b1d7cb5684736e16bf3005723928a48874bc by Robby Stephenson.
Committed on 27/04/2022 at 19:11.
Pushed by rstephenson into branch 'master'.

Fix image paths when importing and exporting GCstar collections.

Be sure to have directory delimiters where appropriate. Add a unit test
case with a wine collection.
FIXED-IN: 3.4.5

M  +4    -0    ChangeLog
A  +-    --    src/tests/data/fb23724a101bd7100cd0360b8ad368bc.jpeg
M  +2    -7    src/tests/data/test-wine.gcs
M  +8    -4    src/tests/gcstartest.cpp
M  +42   -34   src/translators/gcstarexporter.cpp
M  +2    -0    src/translators/gcstarexporter.h
M  +2    -2    src/translators/gcstarimporter.cpp
M  +42   -30   xslt/gcstar2tellico.xsl
M  +7    -4    xslt/tellico2gcstar.xsl

https://invent.kde.org/office/tellico/commit/eb98b1d7cb5684736e16bf3005723928a48874bc
Comment 2 Robby Stephenson 2022-04-27 19:13:08 UTC
Git commit b073fa38d2b2e9fbd0a593a68979ff6a85f6ce73 by Robby Stephenson.
Committed on 27/04/2022 at 19:12.
Pushed by rstephenson into branch '3.4'.

Fix image paths when importing and exporting GCstar collections.

Be sure to have directory delimiters where appropriate. Add a unit test
case with a wine collection.
FIXED-IN: 3.4.5

M  +4    -0    ChangeLog
A  +-    --    src/tests/data/fb23724a101bd7100cd0360b8ad368bc.jpeg
M  +2    -7    src/tests/data/test-wine.gcs
M  +8    -4    src/tests/gcstartest.cpp
M  +42   -34   src/translators/gcstarexporter.cpp
M  +2    -0    src/translators/gcstarexporter.h
M  +2    -2    src/translators/gcstarimporter.cpp
M  +42   -30   xslt/gcstar2tellico.xsl
M  +7    -4    xslt/tellico2gcstar.xsl

https://invent.kde.org/office/tellico/commit/b073fa38d2b2e9fbd0a593a68979ff6a85f6ce73