Fix image paths when importing and exporting GCstar collections.

Be sure to have directory delimiters where appropriate. Add a unit test
case with a wine collection.

BUG: 453075
FIXED-IN: 3.4.5